--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,10 +1,10 @@
 .skill-header {
-    color: white;
+    color: rgb(28, 134, 76);
     text-align: center;
 }
 
 .skill-para {
-    color: white;
+    color: rgb(28, 134, 76);
     text-align: center;
     margin-bottom: 65px;
 }
