--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,141 @@
-.flex-wrap {
+.abt-wrap {
+    color: white;
+    padding-left: 4.5rem;
+    animation: fadeUp 1100ms 0ms forwards;
+}
+
+@keyframes fadeUp {
+    from {
+      transform: translateY(-50px);
+      opacity: 0;
+    } to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+}
+
+.abt-wrap .first {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.abt-wrap .first .abt-left {
+    width: 800px;
+    margin-right: 100px;
+}
+.abt-wrap .first .abt-right img {
+    width: 210px;
+    border-radius: 45%;
+}
+
+.abt-left p{
+    color: rgb(240,255,255);
+    font-size: 21px;
+    text-align: justify;
+    margin-bottom: 32px;
+}
+
+.abt-btn-wrap{
+    display: flex;
+}
+
+.abt-btn-1{ 
+    padding: 11px 26px;
+    border: 1px solid whitesmoke;
+    border-radius: 20px;
+    background: whitesmoke;
+    color: black;
+    margin-right: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.abt-btn-2{ 
+    padding: 11px 26px;
+    border: 1px solid whitesmoke;
+    border-radius: 20px;
+    background: black;
+    color: whitesmoke;
+    margin-right: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.abt-btn-1:hover{
+    background: black;
+    color: whitesmoke;
+}
+
+.abt-btn-2:hover{
+    background: whitesmoke;
+    color: black;
+}
+
+.abt-wrap .second h2{
+    color: rgb(28, 134, 76);
+}
+
+
+.abt-icon-wrap a {
+    color: white;
+    margin-right: 20px;
+}
+
+.abt-icon-wrap a:hover {
+    color: rgb(28, 134, 76);
+}
+
+.third {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: -3rem;
+}
+
+.third .abt-right {
+    margin-right: 70px;
+}
+
+.third .abt-left {
+    width: 750px;
+}
+
+/* RESPONSIVE */
+@media(max-width: 576px) {
+    .third {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    .third .abt-left {
+        width: 270px;
+    }
+    .third .abt-left p {
+        text-align: left;
+    }
+    .abt-wrap {
+        padding-left: 1rem;
+    }
+    .abt-wrap .first {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    .abt-wrap .first .abt-left {
+        width: 270px;
+    }
+    .abt-wrap .first .abt-left p {
+        text-align: left;
+    }
+    .abt-btn-wrap{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 54%;
+    }
+    .abt-btn-1{
+        margin-bottom: 15px;
+    }
 }
