--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -24,6 +24,14 @@
     margin-top: 42vh;
   }
 
+  .fa-info{
+    margin-left: 7px;
+  }
+
+  .fa-file-text-o{
+    margin-left: 2.5px;
+  }
+
   /* When you mouse over the navigation links, change their color */
   .sidenav a:hover {
     color: #f1f1f1;
@@ -37,6 +45,15 @@
   }
   
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+  @media(max-width: 576px){
+    .social-icons {
+      margin-top: 32vh;
+    }
+    .sidenav {
+      height: 100%; /* Full-height: remove this if you want "auto" height */
+      width: 50px; 
+    }
+  }
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
