--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -10,9 +10,9 @@
 }
 
 .skill-pics {
-    padding-left: 9rem;
+    padding-left: 7rem;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-row-gap: 75px;
 } 
 
