Linked CV to Download Button

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -53,6 +53,7 @@
 }
 
 .abt-btn-2{ 
+    text-decoration: none;
     padding: 11px 26px;
     border: 1px solid whitesmoke;
     border-radius: 20px;
