--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -41,6 +41,7 @@
 }
 
 .abt-btn-1{ 
+    text-decoration: none;
     padding: 11px 26px;
     border: 1px solid whitesmoke;
     border-radius: 20px;
